# csp_python

./: .gitignore  .gitmodules  README.md  main.py  python_bindings_example_client.py  python_bindings_example_server.py  server_client.py
csp_python/: CMakeLists.txt  __init__.py  csp_autoconfig.h.in  libcsp_py3.py
csp_python/interface/: uart.py  uart_device.py
